# Chatterbox

./: .env.example  .gitignore  .vercelignore  AGENTS-HANDOFF.md  AGENTS.md  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
Decorations/: HellyKitty  Moon  SparklyPink  SpiderMan  ToyStory  Venom
public/: manifest.webmanifest  sw.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: decorated-text.tsx  titlebar.tsx  user-avatar.tsx
src/lib/: app-sounds.ts  avatar-decorations.ts  cloudflare-realtime.ts  format.ts  keybinds.ts  media-cache.ts  media.ts  name-colors.ts  soundboard-audio.ts  supabase.ts  tauri.ts  types.ts  voice-media.ts
src/stores/: auth.ts  chat.ts  friends.ts  preferences.ts  presence.ts  profiles.ts  soundboard.ts  voice.ts
src/types/: gifenc.d.ts
supabase/: config.toml
supabase/migrations/: 20260709164700_initial_schema.sql  20260709164800_rls_policies.sql  20260709164900_realtime_publication.sql  20260709165000_lock_down_function_exposure.sql  20260709170500_rpc_helpers.sql  20260710093726_media_storage_and_retention.sql  20260710094848_media_cleanup_jwt_auth.sql  20260710095125_media_cleanup_key_bridge.sql  20260710143207_profile_live_settings.sql  20260710144647_media_reservation_indexes.sql  20260710193040_voice_channels.sql  20260711091224_voice_participant_session_identity.sql  20260711163000_soundboard_storage.sql  20260713162000_message_replies.sql  (+7 more)
updates/: latest.json
(+31 files in other folders)
